--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -22,7 +22,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav" id="menus">
                 <li><a href="{:cmf_url('portal/index/index')}"><span>网站首页</span></a></li>
-                <li><a href="{:cmf_url('portal/apps/wlw')}"><span>软件产品</span></a></li>
+                <li><a href="{:cmf_url('portal/List/index',array('id'=>25))}"><span>软件产品</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/index')}"><span>APP开发</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/xcx')}"><span>微信小程序开发</span></a></li>
                 <!--                <li class="dropdown">
