--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -205,67 +205,31 @@
             <div class="container">
                 <div class="swiper-container1">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <li
-                                style="background:url(__TMPL__/public/assets/static/image/over_bg6.png) no-repeat center;">
-                                <a href="waste_disposal.html" target="_blank" rel="nofollow">
-                                    <div class="yl-ccxxNrMc"></div>
-                                    <div class="yl-ccxxNrPos"><img src="__TMPL__/public/assets/static/picture/over6.png"
-                                            alt="垃圾处理项目">
-                                        <p>垃圾处理项目</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </div>
-                        <div class="swiper-slide">
-                            <li
-                                style="background:url(__TMPL__/public/assets/static/image/over_bg1.png) no-repeat center;">
-                                <a href="znjsxt.html" target="_blank" rel="nofollow">
-                                    <div class="yl-ccxxNrMc"></div>
-                                    <div class="yl-ccxxNrPos"><img src="__TMPL__/public/assets/static/picture/over1.png"
-                                            alt="智能健身系统">
-                                        <p>智能健身系统</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </div>
-                        <div class="swiper-slide">
-                            <li
-                                style="background:url(__TMPL__/public/assets/static/image/over_bg2.png) no-repeat center;">
-                                <a href="javascript:;" target="_blank">
-                                    <div class="yl-ccxxNrMc"></div>
-                                    <div class="yl-ccxxNrPos"><img src="__TMPL__/public/assets/static/picture/over2.png"
-                                            alt="智能网校系统">
-                                        <p>智能网校系统</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </div>
+                        <php>
+                            $index = 1;
+                        </php>
+                        <portal:articles item="vo" order="post.create_time DESC" page="6" categoryIds="25"
+                            returnVarName="articles_data">
+                            <div class="swiper-slide">
+                                <li
+                                    style="background:url(__TMPL__/public/assets/static/image/over_bg${index}.png) no-repeat center;">
+                                    <a href="{:url('portal/Article/index',array('id'=>$vo.id,'cid'=>$vo['categories'][0]['id']))}"
+                                        target="_blank" rel="nofollow">
+                                        <div class="yl-ccxxNrMc"></div>
+                                        <div class="yl-ccxxNrPos"><img
+                                                src="__TMPL__/public/assets/static/picture/over{$index}.png"
+                                                alt="{$vo.post_title}">
+                                            <p>{$vo.post_title}</p>
+                                        </div>
+                                    </a>
+                                </li>
+                            </div>
+                            <php>
+                                $index++;
+                            </php>
+                        </portal:articles>
 
-                        <div class="swiper-slide">
-                            <li
-                                style="background:url(__TMPL__/public/assets/static/image/over_bg4.png) no-repeat center;">
-                                <a href="znwyxt.html" target="_blank" rel="nofollow">
-                                    <div class="yl-ccxxNrMc"></div>
-                                    <div class="yl-ccxxNrPos"><img src="__TMPL__/public/assets/static/picture/over4.png"
-                                            alt="智能物业系统">
-                                        <p>智能物业系统</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </div>
-                        <div class="swiper-slide">
-                            <li
-                                style="background:url(__TMPL__/public/assets/static/image/over_bg5.png) no-repeat center;">
-                                <a href="swdcxt.html" target="_blank" rel="nofollow">
-                                    <div class="yl-ccxxNrMc"></div>
-                                    <div class="yl-ccxxNrPos"><img src="__TMPL__/public/assets/static/picture/over5.png"
-                                            alt="政务督办系统">
-                                        <p>政务督办系统</p>
-                                    </div>
-                                </a>
-                            </li>
-                        </div>
+
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
@@ -329,66 +293,45 @@
             <div class="col-md-7 wow bounceInLeft">
                 <h3 class="news_tit">APP开发资讯 / <span>APP News</span></h3>
                 <ul class="rtnw">
+                    <portal:articles item="vo" order="post.create_time DESC" page="2" categoryIds="23"
+                        returnVarName="articles_data">
+                        <li>
+                            <p class="time">
+                                {:date('Y.m',$vo.published_time)}<span>{:date('d',$vo.published_time)}</span></p>
+                            <div class="news_r">
+                                <a
+                                    href="{:url('portal/Article/index',array('id'=>$vo.id,'cid'=>$vo['categories'][0]['id']))}">
+                                    <h3>{$vo.post_title|mb_substr=0,30,'utf-8'}</h3>
+                                </a>
+                                <p class="desc">
+                                    {$vo.post_excerpt|mb_substr=0,80,'utf-8'}
 
-                    <li>
-                        <p class="time">2021.04<span>23</span></p>
-                        <div class="news_r">
-                            <a href="show-989.html">
-                                <h3>ASO（应用商店优化）提示，技巧和策略</h3>
-                            </a>
-                            <p class="desc">
-                                为了使您的APP移动应用程序大受欢迎，您需要保持领先并针对iOS和Android商店进行更新，尝试新概念并接受变化。为了使其变得更容易，我们将ASO的最佳实践分享出来。1.制定清晰的ASO策略准备移动应用程序框架和信息体系结构时，请进行研究，了解市场并了解用户。了解针对所需产品…
-                            </p>
-                        </div>
-                    </li>
+                                </p>
+                            </div>
+                        </li>
+                    </portal:articles>
 
-                    <li>
-                        <p class="time">2021.04<span>13</span></p>
-                        <div class="news_r">
-                            <a href="show-988.html">
-                                <h3>如何寻找Android App 开发公司？</h3>
-                            </a>
-                            <p class="desc">
-                                当前，每一项业务都需要移动应用程序。Android是当今企业用于品牌推广和推广的新兴平台之一。这是因为该平台使企业可以轻松地吸引更多的受众。您想寻找一名Android应用程序开发人员来促进您的业务发展吗？一位专业的Android应用程序开发人员可以将您所有的应用程序创意带入现实…
-                            </p>
-                        </div>
-                    </li>
 
                 </ul>
-                <a href="53.html" title="APP开发资讯" class="more">查看更多</a>
+                <a href="{:cmf_url('portal/List/index',array('id'=>23))}" title="APP开发资讯" class="more">查看更多</a>
             </div>
             <div class="col-md-5 wow bounceInRight">
                 <h3 class="news_tit">常见问题 / <span>Questions</span></h3>
                 <ul class="ltnw">
+                    <portal:articles item="vo" order="post.create_time DESC" page="3" categoryIds="26"
+                        returnVarName="articles_data">
+                        <li>
+                            <div class="wen"><a
+                                    href="{:url('portal/Article/index',array('id'=>$vo.id,'cid'=>$vo['categories'][0]['id']))}">
+                                    <h3>{$vo.post_title|mb_substr=0,30,'utf-8'}</h3>
+                                </a></div>
+                            <p class="da">
+                                {$vo.post_excerpt|mb_substr=0,80,'utf-8'}</p>
+                        </li>
 
-                    <li>
-                        <div class="wen"><a href="show-982.html">
-                                <h3>App Store的佣金降低了15％</h3>
-                            </a></div>
-                        <p class="da">
-                            苹果公司终于将佣金从30％降低到15％，从而终于对年收入不足100万美元的小型开发商，初创企业和其他公司产生了怜悯之心。根据苹果公司在其博客上发布的帖子，如果您是收入低于100万美元的开发人员或企业，您将获得加薪！
-                            大约有2800万开发人员在使用Apple的商店，但其中93％的…</p>
-                    </li>
+                    </portal:articles>
 
-                    <li>
-                        <div class="wen"><a href="show-980.html">
-                                <h3>企业拥有CRM系统的优势</h3>
-                            </a></div>
-                        <p class="da">
-                            如果您的企业规模不大，那么收集和存储数据将变得非常容易。这可以在一些文本文件或电子表格中完成。当您拥有的客户数量开始增加并且员工人数不断增加时，事情开始变得棘手。在这种情况下，CRM可能非常有益。CRM代表客户关系管理。这可用于改善您的业务流程的当前位置。那里有…
-                        </p>
-                    </li>
-
-                    <li>
-                        <div class="wen"><a href="show-964.html">
-                                <h3>使用Python编程的十大行业</h3>
-                            </a></div>
-                        <p class="da">
-                            随着Python在过去二十年中的发展，用例随着使用和采用的增加而增长。按行业分类，Python最常见的十大用途包括：1保险：利用机器学习创建业务洞察力2零售银行业务：灵活的数据转换和处理3航空航天：在软件系统截止日期之前完成4财务：数据挖掘以识别交叉销售机会5商业服务：对财…
-                        </p>
-                    </li>
-
-                    <a href="72.html" title="APP开发常见问题" class="more">查看更多</a>
+                    <a href="{:cmf_url('portal/List/index',array('id'=>26))}" title="APP开发常见问题" class="more">查看更多</a>
                 </ul>
             </div>
         </div>
@@ -400,126 +343,14 @@
     </div>
     <div class="partner_box container">
         <ul class="wow pulse">
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300859585003.png" alt="钢甲天下">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300857150565.png" alt="HIFIMAN">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300856474539.png" alt="EC英语角">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300858530544.png" alt="布劳恩">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300858396867.png" alt="艾克森">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300900418506.png" alt="新天药业">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300902309563.png" alt="辽阳督查室">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300901504274.png" alt="脚本之家">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300902181277.png" alt="科诺医疗">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300904452134.png" alt="徐州国网">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300904314053.png" alt="徐钢集团">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300903500609.png" alt="时光梭健身">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300903362576.png" alt="施维英">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300903097224.png" alt="普拉达健身">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300906199055.png" alt="智慧岛投资">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300906334861.png" alt="紫薇美宝">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300905371588.png" alt="侑居屋">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300905228848.png" alt="艺考情报局">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300905075356.png" alt="讯米课堂">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300905510948.png" alt="展超医疗">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300906076599.png" alt="展聚源">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300904109963.png" alt="雄展教育">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300903229944.png" alt="其乐宠物">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300902557385.png" alt="煤联网">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300902427194.png" alt="蚂蚁货的">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300902043518.png" alt="聚盟">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300901193481.png" alt="惠享商城">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300901027430.png" alt="好拍帮">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300900249505.png" alt="国润机械">
-            </li>
-
-            <li>
-                <img src="__TMPL__/public/assets/static/picture/202007300900098317.png" alt="咕咕通">
-            </li>
+            <portal:articles item="vo" order="post.create_time DESC" page="30" categoryIds="27"
+                returnVarName="articles_data">
+                <notempty name="$vo.thumbnail">
+                    <li>
+                        <img src="{:cmf_get_image_url($vo.thumbnail)}" alt="{$vo.post_title|mb_substr=0,10,'utf-8'}">
+                    </li>
+                </notempty>
+            </portal:articles>
 
         </ul>
         <div class="text-center">
@@ -568,7 +399,7 @@
                         <input type="text" id="txtUserName" name="txtUserName" maxlength="4" class="form-control"
                             placeholder="您的姓名">
                     </li>
-                    <li class="input_1">
+                    <li class="input_2">
                         <input type="text" id="txtUserTel" name="txtUserTel" maxlength="11" class="form-control"
                             placeholder="联系电话">
                     </li>
@@ -576,15 +407,7 @@
                         <input type="text" id="txtContent" name="txtContent" maxlength="50" class="form-control"
                             placeholder="详细描述您的需求...">
                     </li>
-                    <li class="input_3">
-                        <input id="txtCode" name="txtCode" type="text" maxlength="4" class="form-control"
-                            placeholder="验证码">
-                    </li>
-                    <li style="margin-top: 2px;">
-                        <a href="javascript:;" onclick="ToggleCode(this, '/tools/verify_code.ashx');return false;">
-                            <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35"
-                                align="absmiddle"></a><span class="Validform_checktip"></span>
-                    </li>
+
                     <li>
                         <button type="submit" id="btnSubmit" name="btnSubmit"
                             class="btn btn-default tjxmxq">提交需求</button>
