--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -186,17 +186,16 @@
         </ul>
     </div>
     <include file="public@footer" />
-    <script
+    <!-- <script
         type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
-    <script src="__TMPL__/public/assets/static/js/Bmap.js"></script>
-    <script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
+    <script src="__TMPL__/public/assets/static/js/Bmap.js"></script> -->
+    <!-- <script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
     <script>
         if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
             new WOW().init();
         };
-    </script>
-    <script
-        type="text/javascript"> var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://"); document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F8be54612433c604c0b4a06a117cdd627' type='text/javascript'%3E%3C/script%3E")) </script>
+    </script> -->
+
     <script src="__TMPL__/public/assets/static/js/dh.js"></script>
 </body>
 
