--- a/public/themes/simpleboot3/portal/list_product.html
+++ b/public/themes/simpleboot3/portal/list_product.html
@@ -41,8 +41,8 @@
     <div class="case_bgbox">
         <div class="container">
             <div class="index_tit wow bounceInDown">
-                <h5>已有<em>819</em> 家企业从一帆得到了满意的产品设计研发服务</h5>
-                <h5>几乎<i>覆盖全行业</i> 的APP开发经验</h5>
+                <!-- <h5>已有<em>819</em> 家企业从一帆得到了满意的产品设计研发服务</h5>
+                <h5>几乎<i>覆盖全行业</i> 的APP开发经验</h5> -->
             </div>
         </div>
         <div id="tbc_01" class="dis">
