--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -34,7 +34,7 @@
                         <a href="znwyxt.html" rel="nofollow" target="_blank">云遗嘱</a>
                     </ul>
                 </li>-->
-                <li><a href="{:cmf_url('portal/apps/suc')}"><span>成功案例</span></a></li>
+                <li><a href="{:cmf_url('portal/List/index',array('id'=>24))}"><span>成功案例</span></a></li>
                 <li><a href="{:cmf_url('portal/List/index',array('id'=>23))}"><span>开发资讯</span></a></li>
                 <li><a href="{:cmf_url('portal/about/index')}"><span>关于我们</span></a></li>
                 <li><a href="{:cmf_url('portal/about/contact')}"><span>联系我们</span></a></li>
