--- a/public/themes/simpleboot3/portal/wlw.html
+++ b/public/themes/simpleboot3/portal/wlw.html
@@ -178,7 +178,7 @@
     </div>
     <div class="foot_solgn">
         <h1>万物相连，成就美好生活</h1>
-        <p>如有疑问或想了解更多，请咨询：400-663-9990</p>
+        <p>如有疑问或想了解更多，请咨询：13792208163</p>
         <a href="javascript:;" target="_blank" class="wow rubberBand">立即咨询</a>
     </div>
     <script src="__TMPL__/public/assets/static/js/bootstrap.min.js"></script>
@@ -206,7 +206,7 @@
         </ul>
     </div>
     <div class="mb_tel">
-        <a href="tel:400-663-9990"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
+        <a href="tel:13792208163"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
     </div>
     <link rel="stylesheet" href="__TMPL__/public/assets/static/css/validate.css">
     <link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/pagination.css">
