--- a/public/themes/simpleboot3/public/footer.html
+++ b/public/themes/simpleboot3/public/footer.html
@@ -7,7 +7,7 @@
                         <img src="__TMPL__/public/assets/static/picture/foot1.png" alt="山东总公司">
                         <div class="info">
                             <h3>山东总公司</h3>
-                            <p>办公地址：山东静安区平型关路金赢108创意广场银座18楼</p>
+                            <p>办公地址：山东省德州市唐人中心</p>
                             <p>
                                 咨询电话：13792208163<br>
 
@@ -32,8 +32,8 @@
         </div>
     </div>
     <div class="footer_bottom">
-        <div class="container copright">Copyright &copy; 2019 All Rights Reserved 版权所有 ：德州一帆网络科技有限公司 <a
-                href="javascript:;" target="_blank" rel="nofollow">沪ICP备15021857号-4</a></div>
+        <div class="container copright">Copyright &copy; 2021 All Rights Reserved 版权所有 ：德州一帆网络科技有限公司 <a
+                href="javascript:;" target="_blank" rel="nofollow">鲁ICP备15021857号-4</a></div>
         <div class="container copright">德州一帆作为<a href="index.html">APP开发</a>领先品牌，多年来已为上百家山东企业提供高品质的移动应用解决方案及服务。欢迎来电咨询！
             <script
                 type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? "https://" : "http://"); document.write(unescape("%3Cspan id='cnzz_stat_icon_1256883526'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1256883526%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
