--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -1,7 +1,7 @@
 <taglib name="app\portal\taglib\Portal" />
 <div class="topbar">
     <div class="container">
-        <p class="pull_left fiften">十五年核心团队 · 值得信赖</p>
+        <p class="pull_left fiften">十二年核心团队 · 值得信赖</p>
         <div class="pull_right tpr">
             <p class="dh"><i>APP定制开发咨询热线：</i><em>13792208163</em><i></i><em></em></p>
         </div>
