--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -89,7 +89,7 @@
     <div class="comline"></div>
     <div class="container">
         <div class="index_tit wow bounceInDown">
-            <h5>已有<em>819</em> 家企业从一帆得到了满意的产品设计研发服务</h5>
+            <h5>已有<em>918</em> 家企业从一帆得到了满意的产品设计研发服务</h5>
             <h5>几乎<i>覆盖全行业</i> 的APP开发经验</h5>
         </div>
     </div>
@@ -374,7 +374,7 @@
         </ul>
     </div>
     <div class="mb_tel">
-        <a href="tel:400-663-9990"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
+        <a href="tel:13792208163"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
     </div>
     <link rel="stylesheet" href="__TMPL__/public/assets/static/css/validate.css">
     <link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/pagination.css">
@@ -390,21 +390,24 @@
         });
     </script>
     <div class="demand_contair">
-        <a name="xuqiu"></a>
         <div class="container">
-            <form id="feedback_form" name="feedback_form" url="/plugins/feedback/ajax.ashx?action=add&site=main">
+            <form id="feedback_form" name="feedback_form" url="{:url('Form/addPost')}">
                 <h3>请填写您的项目需求给我们：</h3>
                 <ul class="demand_list">
                     <li class="input_1">
-                        <input type="text" id="txtUserName" name="txtUserName" maxlength="4" class="form-control"
+                        <input type="text"  name="post[name]" id='name' maxlength="4" class="form-control"
                             placeholder="您的姓名">
                     </li>
-                    <li class="input_2">
-                        <input type="text" id="txtUserTel" name="txtUserTel" maxlength="11" class="form-control"
+                    <li class="input_1">
+                        <input type="tel"  name="post[phone]" id="phone" maxlength="11" class="form-control"
                             placeholder="联系电话">
                     </li>
+                    <li class="input_1">
+                        <input type="email"  name="post[email]" id="email" maxlength="11" class="form-control"
+                               placeholder="联系邮箱">
+                    </li>
                     <li class="input_2">
-                        <input type="text" id="txtContent" name="txtContent" maxlength="50" class="form-control"
+                        <input type="text"  name="post[business]" id="buisiness" maxlength="50" class="form-control"
                             placeholder="详细描述您的需求...">
                     </li>
 
@@ -421,6 +424,59 @@
     <script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
     <div class="clear"></div>
     <script>
+       /* function isPhone(phone) {
+            return /^1(3\d|4\d|5\d|6\d|7\d|8\d|9\d)\d{8}$/g.test(phone);
+        };
+        //判断用户输入的电子邮箱格式是否正确
+        function checkEmail(email) {
+            var myReg = /^[a-zA-Z0-9_-]+@([a-zA-Z0-9]+\.)+(com|cn|net|org)$/;
+            if (myReg.test(email)) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+
+        $("#btnSubmit").on("click", function () {
+            var sName = $("#name").val();
+            var sMobile = $("#phone").val();
+            var semail = $("#email").val();
+            var sbuisiness = $("#buisiness").val();
+            if(!sName){
+            	alert("请填写姓名");
+            	return false;
+            };
+            if (!sMobile) {
+                alert("请填写手机号");
+                return false;
+            } else if (!isPhone(sMobile)) {
+                alert("请填写正确的手机号");
+                return false;
+            };
+            if(!semail || !checkEmail(semail)){
+                alert("请填写正确的邮箱");
+                return false;
+            }
+
+            $.ajax({
+                type: "POST",
+                dataType: "json",
+                url: "{:url('Form/addPost')}",
+                data: $('#feedback_form').serialize(),
+                success: function (result) {
+                    console.log(result);//打印服务端返回的数据(调试用)
+                    if (result.code == 1) {
+                        alert("提交成功")
+                        document.getElementById("feedback_form").reset();
+                    };
+                },
+                error: function () {
+                    alert("提交失败");
+                }
+            })
+
+        });*/
+
         var swiper = new Swiper('.swiper-container1', {
             slidesPerView: 4,
             autoplay: {
