--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -113,7 +113,7 @@
             <div class="l_pagecon">
                 <div class="l_pagefh wow rubberBand">
                     <a href="index.html#xuqiu" target="_blank" rel="nofollow" class="butt bt1">立即咨询</a>
-                    <a href="86.html" class="butt bt2">返回</a>
+                    <a href="{:cmf_url('portal/List/index',array('id'=>24))}" class="butt bt2">返回</a>
                 </div>
                 <div class="l_pagesxy">
                     <a href="show-139.html" class="next">下一个</a>
@@ -122,7 +122,7 @@
         </div>
     </div>
     <div class="mb_tel">
-        <a href="tel:400-663-9990"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
+        <a href="tel:13792208163"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
     </div>
 
     <include file="public@footer" />
