--- a/public/themes/simpleboot3/portal/znjsxt.html
+++ b/public/themes/simpleboot3/portal/znjsxt.html
@@ -65,7 +65,7 @@
 
                         </ul>
                     </li>
-                    <li><a href="86.html"><span>成功案例</span></a></li>
+                    <li><a href="{:cmf_url('portal/List/index',array('id'=>24))}"><span>成功案例</span></a></li>
                     <li class="dropdown">
                         <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
                             aria-haspopup="true" aria-expanded="false"><span>开发资讯</span> <em class="caret"></em></a>
@@ -597,7 +597,7 @@
         </ul>
     </div>
     <div class="mb_tel">
-        <a href="tel:400-663-9990"><img src="static/picture/silder1.png"></a>
+        <a href="tel:13792208163"><img src="static/picture/silder1.png"></a>
     </div>
     <link rel="stylesheet" href="static/css/validate.css">
     <link type="text/css" rel="stylesheet" href="static/css/pagination.css">
